// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render login-failed type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Inloggning misslyckades
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att logga in just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b border-stone-clear md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render unavailable type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Tjänsten är inte tillgänglig just nu
      </h1>
      <p
        class="ids-preamble"
      >
        Välkommen tillbaka vid senare tillfälle.
      </p>
    </div>
  </div>
</div>
`;

exports[`Should render unknown type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Någonting gick fel
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att visa Intyg just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b border-stone-clear md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
